styles/main.css
/* 
  General
*/

body {
  font-family: 'Source Sans Pro', sans-serif;
  color: snow;
  font-size: 20px;

  background-color: #FF822E;
  background-image: -webkit-linear-gradient(172deg, #ecbc34 0%, #ff822e 31%, #fa6c6c 75%, #fbb8b8 100%);
  background-image: -moz-linear-gradient(172deg, #ecbc34 0%, #ff822e 31%, #fa6c6c 75%, #fbb8b8 100%);
  background-image: -o-linear-gradient(172deg, #ecbc34 0%, #ff822e 31%, #fa6c6c 75%, #fbb8b8 100%);
  background-image: linear-gradient(172deg, #ecbc34 0%, #ff822e 31%, #fa6c6c 75%, #fbb8b8 100%);
}

#main-wrapper {
  margin: 10px auto;
  width: 500px;
}

li {
  list-style: none;
}

a {
  color: snow;
  text-decoration: none;
}

/*
  Header
*/

header {
  text-align: center;
  font-weight: 200;
}

h1 {
  font-weight: 200;
  font-size: 40px;
  letter-spacing: 3px;
  margin: 0;
  margin-top: 1em;
}

.subtitle {
  font-weight: 300;
  font-size: 20px;
  margin: 0;
  margin-top: .2em;
}

/*
  Main
*/

main {
  margin-top: 50px;
}

#search-box {
  margin: 0 auto;
  width: 250px;
}
input {
  width: 100%;
  height: 100%;
  background-color: transparent;
  border-style: none;
  border-bottom: thin solid snow;
  color: snow;
  text-align: center;
  font-size: 20px;
}

input:focus {
  outline: none;
}
input::placeholder {
  color: snow;
  opacity: 0.5;
}
input::-webkit-input-placeholder {
  color: snow;
  opacity: 0.5;
}
input::-moz-placeholder {
  color: snow;
  opacity: 0.5;
}
input:-ms-input-placeholder {
  color: snow;
  opacity: 0.5;
}
input:-moz-placeholder {
  color: snow;
  opacity: 0.5;
}



.dictionary-words {
  margin-top: 50px;
  border-bottom: thin solid snow;
}
.word {
  margin: 2.5em 0;
  display: flex;
  font-weight: 400;
}
.word-name {
  display: block;
  align-self: center;
  width: 90px;
}
.word-meanings {
  display: block;
  align-self: flex-end;
  width: 400px;
  margin: 0;
  padding: 0;
  font-weight: 300;
}
.meaning {
  margin: 0;
  padding: 0;
}
.speech-type {
  color: #efe8e8;
  font-weight: 200;
  font-style: italic;
}

/*
  Footer
*/

footer {
  margin-top: 50px;
  font-size: 16px;
}

.footer-title {
  font-weight: 600;
}
.parts-of-speech {
  font-weight: 300;
}

.credits {
  font-weight: 600;
  font-size: 10px;
  width: 100%;
  margin-top: 50px;
  bottom: 0;
}
.credits ul {
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: space-around;
}

.credits li {
  display: block;
}

